<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:orientation="vertical" >

    <com.baidu.mapapi.map.MapView
        android:id="@+id/geo_bmapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:hint="@string/geo_center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/geo_center_city"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/city"
            android:textSize="20sp" />
          <EditText
            android:id="@+id/geo_center_address"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:singleLine="true"
            android:hint="@string/address"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:hint="@string/geo_range"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/geo_range"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/input_geo_range"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/geo_range_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:hint="@string/geo_range_unit"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_button"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>