<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="250dip"
        android:layout_height="250dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:hint="@string/register_set_username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:hint="@string/register_set_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/comfirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/validation_question"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:hint="@string/validation_question"
            android:singleLine="true" />

        <EditText
            android:id="@+id/validation_answer"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:hint="@string/validation_answer"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_button"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>