<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register" >
	

    <TextView
        android:id="@+id/resetpwd_question"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:hint="@string/cannot_show_question"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/resetpwd_answer"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@id/resetpwd_question"
        android:hint="@string/validation_answer" 
        android:singleLine="true"/>

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@id/resetpwd_answer"
        android:hint="@string/input_new_pwd" 
        android:singleLine="true"/>

    <EditText
        android:id="@+id/confirm_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@id/new_pwd"
        android:hint="@string/confirm_password" 
        android:singleLine="true"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@id/confirm_new_pwd"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:text="@string/confirm_button"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>