<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login" >

    <EditText
        android:id="@+id/etusername"
        style="@style/LoginEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:hint="@string/input_username"
        android:singleLine="true"
        android:inputType="text" />

    <EditText
        android:id="@+id/etpassword"
        style="@style/LoginEditText"
        android:layout_alignLeft="@id/etusername"
        android:layout_below="@id/etusername"
        android:hint="@string/input_password"
        android:inputType="textPassword" 
        android:singleLine="true"/>

    <Button
        android:id="@+id/login"
        android:layout_width="200dip"
        android:layout_height="45dip"
        android:layout_below="@id/etpassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register"
        android:layout_marginRight="28dp"
        android:background="#00000000"
        android:text="@string/forget_password"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</RelativeLayout>