<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/controltime_not_overlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_time"
            android:textSize="20sp" />

        <TimePicker
            android:id="@+id/add_startPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" 
            android:timePickerMode="spinner"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/end_time"
            android:textSize="20sp" />

        <TimePicker
            android:id="@+id/add_endPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" 
            android:timePickerMode="spinner"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/gray" />

    <Button
        android:id="@+id/add_controltimeSet"
        android:layout_width="160dip"
        android:layout_height="45dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button"
        android:text="@string/confirm_button"
        android:textColor="@color/white" />

</LinearLayout>