<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialer" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edtlockPwd"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/transparence"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_cancel"
                android:layout_width="105dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/arror_selector" >
            </Button>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_lock_1"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_2"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_3"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/gray" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_lock_4"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_4"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_5"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_6"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_6"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/gray" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_lock_7"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_7"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_8"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_8"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_9"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_9"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/gray" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_lock_back"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/back"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_0"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/num_0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/line"
                android:layout_height="fill_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_lock_confirm"
                android:layout_width="107dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_selector"
                android:gravity="center"
                android:text="@string/confirm_button"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/gray" >
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>